--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
-	"id": "ec280171-c67b-4cf8-923f-dc27fea91ee1",
-	"authors": ["CubeCoders Limited", "AMP Community"],
-	"origin": "https://github.com/CubeCoders/AMPTemplates.git",
-	"url": "https://github.com/CubeCoders/AMPTemplates",
-	"imagefile": "",
-	"prefix": "",
-	"repotype": "AppTemplates"
+    "id": "ca553aa9-16ca-493d-864a-8f0d522f9ee4",
+    "authors": [
+        "egtechgeek & fffreak9999 - Made with AMP Config Generator"
+    ],
+    "origin": "https://github.com/egtechgeek - Made with AMP Config Generator/AMPTemplates.git",
+    "url": "https://github.com/egtechgeek - Made with AMP Config Generator/AMPTemplates",
+    "imagefile": "",
+    "prefix": "egtechgeek & fffreak9999 - Made with AMP Config Generator"
 }
