--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "id": "ca553aa9-16ca-493d-864a-8f0d522f9ee4",
     "authors": [
-        "egtechgeek and fffreak9999 - Made with AMP Config Generator"
+        "egtechgeek and fffreak9999"
     ],
-    "origin": "https://github.com/egtechgeek - Made with AMP Config Generator/AMPTemplates.git",
-    "url": "https://github.com/egtechgeek - Made with AMP Config Generator/AMPTemplates",
+    "origin": "https://github.com/egtechgeek",
+    "url": "https://github.com/egtechgeek",
     "imagefile": "",
-    "prefix": "egtechgeek - Made with AMP Config Generator"
+    "prefix": "egtechgeek"
 }
