--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "authors": [
         "egtechgeek and fffreak9999"
     ],
-    "origin": "https://github.com/egtechgeek",
-    "url": "https://github.com/egtechgeek",
+    "origin": "https://github.com/egtechgeek/AMPTemplates.git",
+    "url": "https://github.com/egtechgeek/AMPTemplates.git",
     "imagefile": "",
     "prefix": "egtechgeek"
 }
