--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
         "egtechgeek and fffreak9999"
     ],
     "origin": "https://github.com/egtechgeek/AMPTemplates.git",
-    "url": "https://github.com/egtechgeek/AMPTemplates.git",
+    "url": "https://github.com/egtechgeek/AMPTemplates",
     "imagefile": "",
     "prefix": "egtechgeek"
 }
