--- a/renegadexmetaconfig.json
+++ b/renegadexmetaconfig.json
@@ -18,5 +18,10 @@
         "ConfigFile":"UDKGame/Config/UDKXSettings.ini",
         "ConfigType":"ini",
         "AutoMap":true
+    },
+    {
+        "ConfigFile":"UDKGame/Config/UDKEngine.ini",
+        "ConfigType":"ini",
+        "AutoMap":true
     }
 ]
