--- a/renegadexmetaconfig.json
+++ b/renegadexmetaconfig.json
@@ -15,6 +15,11 @@
         "AutoMap":true
     },
     {
+        "ConfigFile":"UDKGame/Config/UDKEngine.ini",
+        "ConfigType":"ini",
+        "AutoMap":true
+    },
+    {
         "ConfigFile":"UDKGame/Config/UDKXSettings.ini",
         "ConfigType":"ini",
         "AutoMap":true
