add config params

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "437e4cb0-07c7-49bb-b34a-a5fcf017b0e7",
     "authors": [
-        "egtechgeek and fffreak9999"
+        "egtechgeek, fffreak9999, Greelan"
     ],
     "origin": "https://github.com/egtechgeek/AMPTemplates.git",
     "url": "https://github.com/egtechgeek/AMPTemplates",
