--- a/renegadexconfig.json
+++ b/renegadexconfig.json
@@ -123,9 +123,157 @@
         "InputType":"number",
         "MinValue":"1",
         "ParamFieldName":"Engine.GameInfo.MaxPlayers",
-        "DefaultValue":"40",
-        "Placeholder":"40",
+        "DefaultValue":"32",
+        "Placeholder":"32",
         "Suffix":"players",
+        "EnumValues":{}
+    },
+	{	
+		"DisplayName":"Starting Credits",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:dns:1",
+        "Description":"Sets the starting amount of credits for players in game",
+        "Keywords":"starting,credits,money",
+        "FieldName":"$InitialCredits",
+        "InputType":"number",
+        "MinValue":"1",
+        "ParamFieldName":"RenX_Game.Rx_Game.InitialCredits",
+        "DefaultValue":"200",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+	},
+	{
+		"DisplayName":"Time Limit",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:dns:1",
+        "Description":"Sets a time limit for the map",
+        "Keywords":"time,limit",
+        "FieldName":"$TimeLimit",
+        "InputType":"number",
+        "MinValue":"1",
+        "ParamFieldName":"RenX_Game.Rx_Game.TimeLimit",
+        "DefaultValue":"0",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+	},
+    {
+        "DisplayName":"Allow Pedestal Victory",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:dns:1",
+        "Description":"If enabled, victory can be enabled by a successful beacon on pedestal",
+        "Keywords":"bUsePedestal,pedestal",
+        "FieldName":"AllowPedestalBeacon",
+        "InputType":"checkbox",
+        "ParamFieldName":"RenX_Game.Rx_Game.bUsePedestal",
+        "DefaultValue":"True",
+        "EnumValues":{
+            "False":"False",
+            "True":"True"
+		}
+    },	
+	{	
+        "DisplayName":"NetServerMaxTickRate",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:engine:1",
+        "Description":"Engine.DemoRecDriver",
+        "Keywords":"advanced,engine,setting",
+        "FieldName":"$NetServerMaxTickRate",
+        "InputType":"number",
+        "MinValue":"-1",
+        "ParamFieldName":"Engine.DemoRecDriver.NetServerMaxTickRate",
+        "DefaultValue":"-1",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+    },
+	{	
+        "DisplayName":"MaxRewindPoints",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:engine:1",
+        "Description":"Engine.DemoRecDriver",
+        "Keywords":"advanced,engine,setting",
+        "FieldName":"$MaxRewindPoints",
+        "InputType":"number",
+        "MinValue":"-1",
+        "ParamFieldName":"Engine.DemoRecDriver.MaxRewindPoints",
+        "DefaultValue":"-1",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+    },
+	{	
+        "DisplayName":"ConfiguredInternetSpeed",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:engine:1",
+        "Description":"Engine.Player",
+        "Keywords":"advanced,engine,setting",
+        "FieldName":"$ConfiguredInternetSpeed",
+        "InputType":"number",
+        "MinValue":"-1",
+        "ParamFieldName":"Engine.Player.ConfiguredInternetSpeed",
+        "DefaultValue":"-1",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+    },
+	{	
+        "DisplayName":"MaxClientRate",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:engine:1",
+        "Description":"IpDrv.TcpNetDriver",
+        "Keywords":"advanced,engine,setting",
+        "FieldName":"$MaxClientRate",
+        "InputType":"number",
+        "MinValue":"-1",
+        "ParamFieldName":"IpDrv.TcpNetDriver.MaxClientRate",
+        "DefaultValue":"-1",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+    },
+	{	
+        "DisplayName":"MaxInternetClientRate",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:engine:1",
+        "Description":"IpDrv.TcpNetDriver",
+        "Keywords":"advanced,engine,setting",
+        "FieldName":"$MaxInternetClientRate",
+        "InputType":"number",
+        "MinValue":"-1",
+        "ParamFieldName":"IpDrv.TcpNetDriver.MaxInternetClientRate",
+        "DefaultValue":"-1",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+    },
+	{	
+        "DisplayName":"NetServerMaxTickRate",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:engine:1",
+        "Description":"IpDrv.TcpNetDriver",
+        "Keywords":"advanced,engine,setting",
+        "FieldName":"$NetServerMaxTickRate",
+        "InputType":"number",
+        "MinValue":"-1",
+        "ParamFieldName":"IpDrv.TcpNetDriver.NetServerMaxTickRate",
+        "DefaultValue":"-1",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+    },
+	{	
+        "DisplayName":"IpDrv.HTTPDownload",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Server:engine:1",
+        "Description":"IpDrv.HTTPDownload",
+        "Keywords":"advanced,engine,setting",
+        "FieldName":"$IpDrv.HTTPDownload",
+        "InputType":"text",
+        "ParamFieldName":"IpDrv.HTTPDownload.RedirectToURL",
+        "DefaultValue":"https://community-content.totemarts.services/",
+        "Placeholder":"https://community-content.totemarts.services/",
         "EnumValues":{}
     }
 ]
