--- a/renegadexconfig.json
+++ b/renegadexconfig.json
@@ -2,7 +2,7 @@
     {
         "DisplayName":"RCON Port",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Basic:dns:1",
         "Description":"",
         "Keywords":"",
         "FieldName":"RconPort",
@@ -15,7 +15,7 @@
     {
         "DisplayName":"Server Name",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Basic:dns:1",
         "Description":"Sets the name of the server to display in the server list",
         "Keywords":"server,name,ServerName",
         "FieldName":"ServerName",
@@ -28,7 +28,7 @@
     {
         "DisplayName":"Server Password",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Basic:dns:1",
         "Description":"Sets the password required to join the server. Default is no password",
         "Keywords":"server,password,GamePassword",
         "FieldName":"GamePassword",
@@ -40,7 +40,7 @@
     {
         "DisplayName":"Enable RCON",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Basic:dns:1",
         "Description":"If set, the server's RCON will be enabled on the Server Port",
         "Keywords":"rcon,enable,bEnableRcon",
         "FieldName":"bEnableRcon",
@@ -55,7 +55,7 @@
     {
         "DisplayName":"RCON/Admin Password",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Basic:dns:1",
         "Description":"Sets the RCON/admin password. Default is no password",
         "Keywords":"server,password,AdminPassword",
         "FieldName":"AdminPassword",
@@ -67,7 +67,7 @@
     {
         "DisplayName":"Initial Map",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Basic:dns:1",
         "Description":"Sets the initial map to start the server with",
         "Keywords":"initial,map",
         "FieldName":"Map",
@@ -116,7 +116,7 @@
     {
         "DisplayName":"Player Limit",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Basic:dns:1",
         "Description":"Sets the maximum number of players that can connect to the server at one time",
         "Keywords":"max,maximum,players,limit,MaxPlayers",
         "FieldName":"$MaxUsers",
@@ -131,7 +131,7 @@
 	{	
 		"DisplayName":"Starting Credits",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Additional:dns:1",
         "Description":"Sets the starting amount of credits for players in game",
         "Keywords":"starting,credits,money",
         "FieldName":"$InitialCredits",
@@ -146,14 +146,29 @@
 	{
 		"DisplayName":"Time Limit",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Additional:dns:1",
         "Description":"Sets a time limit for the map, 0 for no time limit",
         "Keywords":"time,limit",
         "FieldName":"$TimeLimit",
         "InputType":"number",
-        "MinValue":"1",
+        "MinValue":"0",
         "ParamFieldName":"RenX_Game.Rx_Game.TimeLimit",
         "DefaultValue":"0",
+        "Placeholder":"",
+        "Suffix":"",
+        "EnumValues":{}
+	},
+	{
+		"DisplayName":"Vehicle Limit",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Additional:dns:1",
+        "Description":"Sets a vehicle limit",
+        "Keywords":"vehicles,vehicle,limit",
+        "FieldName":"$VehicleLimit",
+        "InputType":"number",
+        "MinValue":"1",
+        "ParamFieldName":"RenX_Game.Rx_Game.VehicleLimit",
+        "DefaultValue":"20",
         "Placeholder":"",
         "Suffix":"",
         "EnumValues":{}
@@ -161,7 +176,7 @@
     {
         "DisplayName":"Allow Pedestal Victory",
         "Category":"Renegade X:stadia_controller",
-        "Subcategory":"Server:dns:1",
+        "Subcategory":"Additional:dns:1",
         "Description":"If enabled, victory can be enabled by a successful beacon on pedestal",
         "Keywords":"bUsePedestal,pedestal",
         "FieldName":"AllowPedestalBeacon",
@@ -172,7 +187,37 @@
             "False":"False",
             "True":"True"
 		}
+    },
+	{
+        "DisplayName":"Allow Airdrops",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Additional:dns:1",
+        "Description":"If enabled, supplies can be airdropped",
+        "Keywords":"airdrop",
+        "FieldName":"bEnableAirdrops",
+        "InputType":"checkbox",
+        "ParamFieldName":"RenX_Game.Rx_Game.bEnableAirdrops",
+        "DefaultValue":"True",
+        "EnumValues":{
+            "False":"False",
+            "True":"True"
+		}
     },	
+	{
+        "DisplayName":"Spawn Crates",
+        "Category":"Renegade X:stadia_controller",
+        "Subcategory":"Crates:dns:1",
+        "Description":"If enabled, crates will spawn",
+        "Keywords":"SpawnCrates,crates",
+        "FieldName":"EnableCrates",
+        "InputType":"checkbox",
+        "ParamFieldName":"RenX_Game.Rx_Game.SpawnCrates",
+        "DefaultValue":"True",
+        "EnumValues":{
+            "False":"False",
+            "True":"True"
+		}
+    },
 	{	
         "DisplayName":"NetServerMaxTickRate",
         "Category":"Renegade X:stadia_controller",
